# market-making-simulation

./: .gitignore  CMakeLists.txt  README.md
analysis/: analysis.py  analyze.py  compare.py
config/: default.json
report/: bibliography.bib  report.typ
src/: main.cpp
src/core/: Agent.cpp  Agent.hpp  Config.hpp  OrderArrivalModel.hpp  Portfolio.hpp  PriceProcess.hpp  Simulator.cpp  Simulator.hpp  Statistics.hpp
tests/: CMakeLists.txt  test_config.cpp
